--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-todo-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://iamadityanarayan.github.io/react-todo-app",
+  "homepage": "https://iamadityanarayan.github.io/react-todo-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
